# pi-top-Python-SDK

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  Jenkinsfile  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  conftest.py  dev-install.sh  pulse-manual-configuration.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.README/: main.rst
.deprecated/: README.md
.deprecated/ptbuttons/: __init__.py
.deprecated/ptoled/: __init__.py
.deprecated/ptpma/: __init__.py
.deprecated/ptprotoplus/: __init__.py
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: api-change.md  bug.md  config.yml  feature-request.md  suggestion.md
.github/workflows/: 01-python-package.yml  02-debian-package.yml  03-debian-publish.yml  03-python-publish-test.yml  03-python-publish.yml  build-arm-on-commits-to-master.yml  build-deb.yml  build-on-commits-to-master.yml  build-on-prs-to-master.yml  build-test-python-release.yml  build.yml  bump-changelog-in-pr-on-commits-to-master.yaml  codeql-analysis.yml  codeql.yml  create-draft-release-on-chglog-merge.yml  deb-build.yml  deb-release.yml  deb-update-changelog.yml  deploy-published-release.yml  deploy-python-release-on-publish.yml  deploy-release-on-publish.yml  deploy-test-python-release.yml  draft-release-from-tag.yml  publish-release.yml  python-publish.yml  release.yml  tag-and-draft-release-on-changelog-pr-merge.yml  tag-published-release-as-stable.yml  test-all-commits.yml  test-and-build-on-all-commits.yml  test-and-build-on-commits-to-master.yml  test-and-build-on-prs-to-master.yml  test-python-publish.yml  test-runner-docker-builder.yml  test.yml  update-changelog-draft-pr-on-commits-to-master.yml  update-changelog.yml  wily.yml  workflow.yml
cli/: pt-oled.py  pt_battery.py  pt_brightness.py  pt_device.py  pt_host.py
debian/: changelog  control  copyright  pt-pma.install  pt-pma.lintian-overrides  ptpma.install  ptpma.lintian-overrides  py3dist-overrides  python3-pitop-cli.lintian-overrides  python3-pitop-doc.doc-base  python3-pitop-doc.lintian-overrides  python3-pitop-examples.install  python3-pitop-full.install  python3-pitop-full.lintian-overrides  python3-pitop.install  python3-pitop.links  python3-pitop.lintian-overrides  python3-pitop.manpages  python3-pitop.triggers  python3-pt-buttons.install  python3-pt-oled.install  python3-pt-pma-doc.doc-base  python3-pt-pma.install  python3-pt-pma.lintian-overrides  python3-pt-proto-plus.install  python3-ptpma-doc.doc-base  rules  watch
debian/bullseye-overrides/: python3-pitop-cli.lintian-overrides  python3-pitop-doc.lintian-overrides
debian/extra/: python3-pitop-docs.desktop  python3-pt-pma-docs.desktop  python3-ptpma-docs.desktop
debian/patches/: series  smbus2-to-smbus.patch
debian/source/: lintian-overrides  options
deprecated/ptbuttons/: __init__.py
deprecated/ptoled/: __init__.py
docs/: .api_advanced_usage.rst  advanced_examples.rst  api_advanced_usage.rst  api_battery.rst  api_camera.rst  api_case_buttons.rst  api_core.rst  api_display.rst  api_general.rst  api_helpers.rst  api_keyboard.rst  api_miniscreen.rst  api_oled.rst  api_pitop_device.rst  api_pitop_peripheral_devices.rst  api_pitop_peripherals.rst  api_pma.rst  api_pma_components.rst  api_protoplus.rst  api_pulse.rst  api_robotics.rst  api_system.rst  api_system_devices.rst  basic_examples.rst  case_buttons.rst  cli_tools.rst  component_examples.rst  conf.py  contributing.rst  examples.rst  examples_advanced.rst  examples_api_advanced.rst  examples_api_basic.rst  examples_basic.rst  examples_cli.rst  examples_python_advanced.rst  examples_python_basic.rst  faq.rst  getting_started.rst  getting_started_pma.rst  (+19 more)
docs/api/: index.rst  keyboard.rst
docs/api_advanced_usage/: alex_robot.rst  pi_top.rst
docs/api_core/: battery.rst  display.rst  miniscreen.rst
docs/api_helpers/: camera.rst  keyboard.rst
docs/api_miniscreen/: api_buttons.rst  api_oled.rst  buttons.rst  oled.rst
examples/: dlib_ultrasonic_test.py  metaclass_testing.py  pitop_simulate.py  pmabutton.py  pmacamera_capture_video.py  pmajoystick.py  pmalightsensor.py  pmaservomotor.py
graphics-test/: pygame-simple.py  pygame_draw_pitop.py  tk_draw_pitop.py
pitop/: __init__.py  version.py
pitopcli/: __main__.py  battery.py  brightness.py  cli_base.py  deprecated_cli_runner.py  devices.py  display.py  docs.py  formatter.py  help.py  host.py  imu.py  imu_calibration.py  oled.py  pitop.py  pt_battery.py  pt_brightness.py  pt_cli_base.py  pt_config.py  pt_device.py  pt_devices.py  pt_host.py  pt_oled.py  pt_socket.py  rover.py  rover_start_detach.py  support.py
pitoputils/: bitwise_ops.py  command_runner.py  common_ids.py  common_names.py  current_session_info.py  firmware_device.py  i2c_device.py  lock.py  logger.py  notifications.py  ptdm_message.py  smbus_device.py  sys_config.py  sys_info.py
ptpma/: __init__.py  adc_base.py  button.py  buzzer.py  camera.py  components.py  encoder_motor.py  imu.py  light_sensor.py  parameters.py  plate_interface.py  servo_controller.py  servo_motor.py  ultrasonic_sensor.py
pulse-eeprom/: README.md
tests/: .test_camera.py  .test_camera_core_frame_handler.py  Dockerfile  README.md  requirements.txt  test_ball_detector.py  test_bitwise_ops.py  test_button.py  test_buzzer.py  test_camera.py  test_camera_core_frame_handler.py  test_command_runner.py  test_configuration_file.py  test_drive_controller.py  test_encoder_motor.py  test_encoder_motor_controller.py  test_face_and_emotion_detector.py  test_face_detector.py  test_firmware_device.py  test_frame_handler.py  test_i2c_device.py  test_keyboard.py  test_led.py  test_light_sensor.py  test_line_detector.py  test_lock.py  test_miniscreen_assistant.py  test_miniscreen_buttons.py  test_miniscreen_oled.py  test_navigation_controller.py  test_oled.py  test_pitop.py  test_pma_camera.py  test_pma_camera_core_frame_handler.py  test_pma_encoder_motor.py  test_pma_encoder_motor_controller.py  test_pma_servo_controller.py  test_pma_state_keys.py  test_pma_ultrasonic.py  test_potentiometer.py  (+10 more)
(+678 files in other folders)
