[tool.poetry]
name = "pi-top-python-sdk"
version = "0.1.0"
description = ""
authors = ["Mike Roberts <2947595+m-roberts@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dlib = "19.22.0"
Flask = "1.0.2"
Flask-Cors = "3.0.7"
Flask-Sockets = "0.2.1"
gevent = "1.3.7"
gevent-websocket = "0.10.1"
gpiozero = "1.6.2"
imageio = "2.4.1"
imutils = "0.5.4"
"luma.core" = "2.3.1"
"luma.oled" = "3.8.1"
matplotlib = "3.0.2"
monotonic = "1.1"
numpy = "1.16.6"
onnxruntime = "1.8.1"
Pillow = "5.4.1"
pitopcommon = "0.8.8"
pyinotify = "0.9.6"
pynput = "1.4.2"
pyserial = "3.4"
PyV4L2Camera = "0.1a2"
scipy = "1.1.0"
simple-pid = "0.2.4"
scikit-learn = "0.20.2"
wget = "3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
