[metadata]
name = pitop
# It should be possible to use an attr, but this failed on last attempt
# https://github.com/pypa/setuptools/pull/1753
version = file: pitop/version.txt
author = pi-top (CEED Ltd)
author_email = deb-maintainers@pi-top.com
license = Apache Software License
description = pi-top Python SDK
keywords = pi-top, raspberrypi, gpio
url = https://github.com/pi-top/pi-top-Python-SDK
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Hardware
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    #############
    # Utilities #
    #############
    # For reviewing DHCP leases
    isc_dhcp_leases>=0.9.1,<0.10.0
    # For network interface checking
    netifaces>=0.10.4,<0.11.0
    # For journal logging
    systemd-python>=234,<235
    # SMBusDevice (PMA)
    smbus2>=0.4.0,<0.5.0
    # Device Communication
    pyzmq>=20.0.0,<21.0.0
    # Images
    opencv>=4.5.1,<4.6
    #######
    # PMA #
    #######
    # To use GPIO & components
    gpiozero>=1.6.2,<1.7
    # To perform operations with images
    imageio>=2.4.1,<2.5
    # Camera uses numpy arrays for image data
    numpy>=1.19.5,<1.20
    # Manage camera images
    Pillow>=8.1.2,<8.2
    # IMU Calibration
    matplotlib>=3.3.4,<3.4
    scipy>=1.6.0,<1.7
    ##############
    # Miniscreen #
    ##############
    monotonic>=1.5,<1.6
    pyinotify>=0.9.6,<0.10
    RPi.GPIO>=0.7.0<0.8.0
    spidev>=3.5<3.6
    #########
    # Pulse #
    #########
    pyserial>=3.5,<3.6
    #############
    # Webserver #
    #############
    flask>=1.1.2,<1.2
    flask-cors>=3.0.9,<3.1
    flask-sockets>=0.2.1,<0.3
    gevent>=20.9.0,<20.10.0
    gevent-websocket>=0.10.1,<0.11.0
    #############################
    # Advanced image processing #
    #############################
    dlib>=19.22.0,<19.23.0
    imutils>=0.5.4,<0.6.0
    ########################
    # Download Model Files #
    ########################
    wget>=3.2,<4.0
include_package_data = True

[options.entry_points]
console_scripts =
    pt=pitopcli.pitop:main
    pi-top=pitopcli.pitop:main

[options.extras_require]
computer_vision = onnxruntime>=1.8.1,<1.9
doc = sphinx>=3.4.3,<3.5

[bdist_wheel]
universal = 1

[flake8]
per-file-ignores =
    __init__.py: F401
    test_*: E402
# https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
extend-ignore = E203
max-line-length = 150

[isort]
profile = black
