[metadata]
name = pitop
# It should be possible to use an attr, but this failed on last attempt
# https://github.com/pypa/setuptools/pull/1753
author = pi-top (CEED Ltd)
author_email = deb-maintainers@pi-top.com
license = Apache Software License
description = pi-top Python SDK
keywords = pi-top, raspberrypi, gpio
url = https://github.com/pi-top/pi-top-Python-SDK
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Hardware
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    # Versions are set to match latest versions distributed on pi-topOS
    # i.e. Debian Bullseye versions - https://packages.debian.org/bullseye/python/
    #############
    # Utilities #
    #############
    # DHCP leases
    isc_dhcp_leases >= 0.9.1
    # Network interfaces
    netifaces >= 0.10.4
    # Journal logging
    systemd-python >= 234
    # SMBusDevice (PMA)
    smbus2 >= 0.4.0
    # Device Communication
    pyzmq >= 20.0.0
    # Images
    opencv-python >= 4.5.1
    #######
    # PMA #
    #######
    # To use GPIO & components
    gpiozero >= 1.6.2
    # To perform operations with images
    imageio >= 2.4.1
    # Camera uses numpy arrays for image data
    numpy >= 1.19.5
    # Manage camera images
    Pillow >= 8.1.2
    # IMU Calibration
    matplotlib >= 3.3.4
    scipy >= 1.6.0
    ##############
    # Miniscreen #
    ##############
    monotonic >= 1.5
    pyinotify >= 0.9.6
    RPi.GPIO >= 0.7.0
    Mock.GPIO >= 0.1.8
    spidev >= 3.5
    #########
    # Pulse #
    #########
    pyserial >= 3.5
    #############
    # Webserver #
    #############
    flask >= 1.1.2
    flask-cors >= 3.0.9
    flask-sockets >= 0.2.1
    gevent >= 20.9.0
    gevent-websocket >= 0.10.1
    #############################
    # Advanced image processing #
    #############################
    dlib >= 19.22.0
    imutils >= 0.5.4
    ########################
    # Download Model Files #
    ########################
    wget>=3.2
include_package_data = True

[options.entry_points]
console_scripts =
    pt=pitopcli.__main__:main
    pi-top=pitopcli.__main__:main

[options.extras_require]
computer_vision = onnxruntime >= 1.8.1
doc = sphinx >= 3.4.3

[bdist_wheel]
universal = 1

[flake8]
per-file-ignores =
    __init__.py: F401
    test_*: E402
# https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
extend-ignore = E203
max-line-length = 150

[isort]
profile = black

[tool:pytest]
addopts =  --numprocesses auto --dist loadfile
